2011-04-05  Brian Weinstein  <bweinstein@apple.com>

        [Windows]  fast/blockflow/Kusa-Makura-background-canvas.html failing since introduction in r82903
        https://bugs.webkit.org/show_bug.cgi?id=57880
        
        Update Windows expected results (with pixel tests) to greenify the bots.

        * platform/win/fast/blockflow/Kusa-Makura-background-canvas-expected.checksum:
        * platform/win/fast/blockflow/Kusa-Makura-background-canvas-expected.png:
        * platform/win/fast/blockflow/Kusa-Makura-background-canvas-expected.txt:

2011-04-05  Jessie Berlin  <jberlin@apple.com>

        [Windows Tests] fast/dom/Window/window-property-descriptors.html failing since r82925.
        https://bugs.webkit.org/show_bug.cgi?id=57881

        Update the Windows-specific results to get the bots green.

        * platform/win/fast/dom/Window/window-property-descriptors-expected.txt:
        onformchange and onforminput were removed in r82925.

2011-04-05  Tony Chang  <tony@chromium.org>

        Unreviewed, removing the chromium-win results causes this test to
        start passing on chromium win and linux.

        * platform/chromium-win/fast/images/svg-as-tiled-background-expected.checksum: Removed.
        * platform/chromium-win/fast/images/svg-as-tiled-background-expected.png: Removed.
        * platform/chromium/test_expectations.txt:

2011-04-05  David Levin  <levin@chromium.org>

        Reviewed by Jian Li.

        [chromium] send-sliced-dragged-file.html started to crash on chromium bots
        https://bugs.webkit.org/show_bug.cgi?id=57539

        * platform/chromium/test_expectations.txt: Removed passing test
          as it has been fixed in the chromium network stack as of chromium r80114
          and it was introduced in r79905 so no need to change the chromium deps
          since it is before the regression.

2011-04-05  Adrienne Walker  <enne@google.com>

       Unreviewed, mark unexpectedly passing Linux Chromium tests as such.
